# qcore-octave

./: .gitignore  LICENSE.md  README.md  _verse.py  pyproject.toml
examples/: rr_spec.py
examples/project_folder/: elements.yml  instruments.yml  qubit.yml  readout.yml  setup_elements.py  setup_instruments.py
qcore/: __init__.py  dataset.py  experiment.py  expvariable.py  instrument.py  parameter.py  resource.py  sweep.py
qcore/elements/: __init__.py  cavity.py  element.py  iq_mixer.py  mode.py  qubit.py  readout.py  rf_switch.py
qcore/gui/: instrument_widget.py  instrument_widget.ui  server_widget.py  server_widget.ui  server_widget_ui.py  ui_instrument_widget.py  ui_server_widget.py  ui_verse.py  verse.py  verse.ui  verse_ui.py
qcore/helpers/: __init__.py  datasaver.py  logger.py  plotter.py  server.py  stage.py  yamlizer.py
qcore/instruments/: __init__.py  config.py  instrument.py  server.py
qcore/instruments/anritsu/: __init__.py  ms46522b.py
qcore/instruments/drivers/: __init__.py  qm.py  qm_config_builder.py  qm_octave_dummy.py  qm_octave_setter.py  (+6 more)
qcore/libs/: __init__.py  data_fns.py  fit_fns.py  qua_macros.py
qcore/modes/: __init__.py  cavity.py  mode.py  qubit.py  readout.py
qcore/pulses/: __init__.py  constant_pulse.py  digital_waveform.py  gaussian_pulse.py  numerical_pulse.py  pulse.py  ramped_constant_pulse.py  readout_pulse.py
qcore/scripts/: mixer_tuning.py  readout_training.py
qcore/sequences/: constructors.py  power_rabi.py  rr_spec.py
qcore/tests/: test_experiment_saves_metadata.py
qcore/var_types/: __init__.py  dataset.py  sweep.py  variable.py
qcore/variables/: __init__.py  dataset.py  datasets.py  parameter.py  sweep.py  sweeps.py
tests/: test_control.py  test_experiment.py  test_power_rabi.py  test_rr_spec_exp.py
(+34 files in other folders)
