[tool.poetry]
name = "qcore"
version = "0.1.0"
description = "The codebase for running circuit QED experiments in qcrew's lab"
authors = ["qcrew <general.qcrew@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PyVISA = "^1.12.0"
PyQt5 = "5.15.4"
Pyro5 = "^5.13.1"
loguru = "^0.6.0"
pyqtgraph = "^0.13.1"
h5py = "^3.7.0"
PyYAML = "^6.0"
qm-qua = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pyqt5-tools = "^5.15.4.3.2"
Sphinx = "^5.1.1"
pytest = "^7.1.3"
black = "21.12b0"
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
